todo-app/manifests/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - port: 80        
      targetPort: 3000 
      nodePort: 30080
